# WoodletJump

./: .gitignore  CMakeLists.txt  README.md
UtilLib/: CMakeLists.txt
UtilLib/include/Util/: Color.h  Segment.h  TextureRect.h
UtilLib/src/: Vector.cpp
WoodletJump/: CMakeLists.txt  Makefile
WoodletJump/include/: Application.h  Background.h  Camera.h  Constants.h  Logger.h  Player.h  Shader.h  Sprite.h  Texture.h  WoodletJump.h
WoodletJump/include/Renderer/: ColorRenderer.h  SceneRenderer.h  SpriteRenderer.h
WoodletJump/include/UI/: Controls.h  Credits.h  GameOver.h  Pause.h  UI.h
WoodletJump/include/Util/: Box.h  BufferBuilder.h  Color.h  Segment.h  TextureRect.h  Vector.h
WoodletJump/include/World/: Platform.h  World.h
WoodletJump/src/: Application.cpp  Background.cpp  Camera.cpp  Logger.cpp  Player.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  WoodletJump.cpp  main.cpp
WoodletJump/src/Renderer/: ColorRenderer.cpp  SceneRenderer.cpp  SpriteRenderer.cpp
WoodletJump/src/UI/: Controls.cpp  Credits.cpp  GameOver.cpp  Pause.cpp  UI.cpp
WoodletJump/src/Util/: BufferBuilder.cpp  Color.cpp  Segment.cpp  TextureRect.cpp  Vector.cpp
WoodletJump/src/World/: Platform.cpp  World.cpp
